# Stardust

./: CMakeLists.txt  Makefile  README.md  makefile
asm/x64/: Stardust.asm
include/: Common.h  Constexpr.h  Defs.h  Ldr.h  Macros.h  Utils.h  common.h  constexpr.h  macros.h  memory.h  native.h  resolve.h
scripts/: Linker.ld  build.py  extract.py  linker.ld  loader.c  stomper.c
src/: Ldr.c  Main.c  PreMain.c  Utils.c  main.cc  resolve.cc
src/asm/: entry.x64.asm  entry.x86.asm  utils.x64.asm  utils.x86.asm
test/: stomper.cc
